--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Hello, this is our readme for our Tablet to Server application for Android
-applications.
+Hello, this is the second iteration of our README file being changed in order
+to see if our github activity is working correctly. :)
